# encode_unicode

./: .cirrus.yml  .travis.yml  Cargo.toml  README.md  RELEASES.md  do.sh
benches/: length.rs  multiiterators.rs
examples/: length_distribution.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: utf16char_decoding_iterators.rs  utf8char_decoding_iterators.rs  utf8char_from_slice_start.rs
src/: builders.rs  decoding_iterators.rs  errors.rs  lib.rs  traits.rs  utf16_char.rs  utf16_iterator.rs  utf16_iterators.rs  utf8_char.rs  utf8_iterator.rs  utf8_iterators.rs
tests/: errs.rs  exhaustive.rs  fail_tests.rs  iterator_tests.rs  iterators.rs  oks.rs  pass_tests.rs  read_iterators.rs
