[package]
name = "encode_unicode"
keywords = ["unicode","UTF-8","UTF-16"]
description = """
UTF-8 and UTF-16 iterators, character types and related methods for char, u8 and u16.
"""
readme = "README.md"
version = "0.2.0"
license = "MIT/Apache-2.0"
repository = "https://github.com/tormol/encode_unicode"
documentation = "http://tormol.github.io/rustdoc/encode_unicode"
authors = ["Torbjørn Birch Moltu <t.b.moltu@lyse.net>"]

[dependencies]
ascii = {optional=true, version="0.8", default-features=false}# disable std
clippy = {optional=true, version="0.*"}# wildest wildcard crates.io will allow.

[features]
std = []
default = ["std"]
