[package]
name = "encode_unicode"
keywords = ["unicode","UTF-8","UTF-16"]
categories = ["encoding","no-std"]
description = """
UTF-8 and UTF-16 character types, iterators and related methods for char, u8 and u16.
"""
readme = "README.md"
version = "0.3.6"
license = "MIT/Apache-2.0"
repository = "https://github.com/tormol/encode_unicode"
documentation = "https://docs.rs/encode_unicode/"
authors = ["Torbjørn Birch Moltu <t.b.moltu@lyse.net>"]

[dependencies.ascii]
optional = true
version = "1.0.0"
default-features = false # don't need std for the parts we use

[target.'cfg(unix)'.dev-dependencies]
lazy_static = "1.0"

[dev-dependencies]
reqwest = "0.9"

[features]
std = []
default = ["std"]

[package.metadata.docs.rs]
features = ["ascii/std"]
